Fix overflow on start / select

--- a/snes.css
+++ b/snes.css
@@ -47,7 +47,7 @@ start and select buttons. */
 .custom .back, .custom .start{
     background: url(snes-assets/Menus.png);
     width: 74px;
-    height: 66px;
+    height: 65px;
 }
 .custom .back.pressed, .custom .start.pressed{
     background-position-y:-96px;
